--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "ts-standard": "^12.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
